feat: added images and names - ex.2

--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -1,4 +1,5 @@
 <h1>Employee list</h1>
+<h2>{{title$}}</h2>
 <ul *ngIf="data$ | async as data; else empty">
   <li *ngFor="let employee of data">{{ employee.id }}: {{ employee.name }}. Email: {{employee.email}}</li>
 </ul>
