--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -1,7 +1,7 @@
 <h1>Employee list</h1>
 <h2>{{title$}}</h2>
 <ul *ngIf="data$ | async as data; else empty">
-  <li *ngFor="let employee of data">{{ employee.id }}: {{ employee.name }}. Email: {{employee.email}}</li>
+  <li *ngFor="let employee of data">{{ employee.personalNumber }}: {{ employee.name }}. Email: {{employee.mail}}</li>
 </ul>
 
 <ng-template #empty> There is no data </ng-template>
