--- a/src/app/ui/employees-faces/employees-faces.component.html
+++ b/src/app/ui/employees-faces/employees-faces.component.html
@@ -1,5 +1,5 @@
 <h1>Faces</h1>
 <div style="display: inline-block; margin-right: 20px" *ngFor="let employee of data$ | async ">
-  <img  style="width: 200px" [src]="employee.image"><br>
+  <img  style="width: 200px" [src]="employee.img"><br>
   {{employee.name}}
 </div>
