--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <employee-list></employee-list>
-<app-employees-faces></app-employees-faces>
+<employee-list></employee-list>
+<!-- <app-employees-faces></app-employees-faces>
 <app-project-list></app-project-list> -->
 <app-employee-form></app-employee-form>
