--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,26 @@
-<app-employee-list></app-employee-list>
-<app-employee-form></app-employee-form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <title>Lowgular</title>
+  <base href="/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <!-- CSS only -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+  <link href=' http://fonts.googleapis.com/css?family=Inter' rel='stylesheet' type='text/css'>
+</head>
+<body>
+  <div class="container">
+    <div class="list col-lg-6">
+      <app-employee-list></app-employee-list>
+    </div>
+    <div class="form col-lg-6">
+      <app-employee-form></app-employee-form>
+    </div>
+  </div>
+</body>
+</html>
+
