--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,10 +15,7 @@
 <body>
   <div class="container">
     <div class="list col-lg-6">
-      <app-employee-list></app-employee-list>
-    </div>
-    <div class="form col-lg-6">
-      <app-employee-form></app-employee-form>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </body>
