--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,11 +13,38 @@
   <link href=' http://fonts.googleapis.com/css?family=Inter' rel='stylesheet' type='text/css'>
 </head>
 <body>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">My app</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" routerLink="/">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/employee-list">List</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/create-employee">Form</a>
+      </li>
+    </ul>
+  </div>
+</nav>
   <div class="container">
     <div class="list col-lg-6">
       <router-outlet></router-outlet>
     </div>
   </div>
+<footer class="bg-light text-center text-lg-start">
+  <!-- Copyright -->
+  <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+       &#169; 2022 Copyright:
+      <a class="text-dark" href="https://github.com/werq183">Weronika Kot</a>
+  </div>
+
+</footer>
 </body>
 </html>
 
