feat: create details page

--- a/src/app/ui/employee-list/employee-list.component.html
+++ b/src/app/ui/employee-list/employee-list.component.html
@@ -9,7 +9,7 @@
     </tr>
     <tr *ngFor="let employee of data">
       <td>{{ employee.personalNumber }}</td>
-      <td><a routerLink="/employee-details/{{employee.personalNumber}}/{{employee.name}}">{{ employee.name }}</a></td>
+      <td><a routerLink="/employee-details/{{employee.personalNumber}}">{{ employee.name }}</a></td>
       <td>{{employee.mail}}</td>
       <td><button class="remove" (click)="remove(employee.personalNumber)">Remove</button></td>
     </tr>
