--- a/src/app/ui/employee-details/employee-details.component.html
+++ b/src/app/ui/employee-details/employee-details.component.html
@@ -1,3 +1,3 @@
 <h1>Employee details</h1>
-id: {{(params$ | async)?.id}}<br>
-name: {{(params$ | async)?.name}}
+id: {{(details$ | async)?.personalNumber}}<br>
+name: {{(details$ | async)?.name}}
